# webview_csharp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: release.yaml  webview.yaml
examples/DesktopApp/: DesktopApp.csproj  DesktopApp.wxs  Program.cs  wix.bat
examples/DesktopApp/app/: app.css  index.html
examples/DesktopApp/wwwroot/: app.js
examples/Minimal/: Minimal.csproj  Program.cs
libs/: 000-WindowTitlebarIcon.patch  001-InitPointVars.patch  002-Windows-HideUntilRun.patch  WebView2Loader.dll.lib  libwebview.dylib
libs/include/: WebView2.h  WebView2EnvironmentOptions.h
src/SharpWebview/: Bindings.cs  Loopback.cs  SharpWebview.csproj  SharpWebview.sln  StartupParameters.cs  Webview.cs
src/SharpWebview/Content/: EmbeddedContent.cs  HostedContent.cs  HtmlContent.cs  IWebviewContent.cs  UrlContent.cs
